@@ -1,5 +1,11 @@
 2006-08-14 Joerg Wunsch <j@uriah.heep.sax.de>
 
+	Submitted by <chris@awaretechs.com>:
+	* avrdude.conf.in (ATmega48, ATmega88, ATmega168): patch #5100:
+	mega88 EEPROM support (extended for ATmega48 and ATmega168 - jw).
+
+2006-08-14 Joerg Wunsch <j@uriah.heep.sax.de>
+
 	Submitted by <eolson@mit.edu>:
 	* stk500v2.c (stk500v2_open): patch #5273: Emit error message
 	if user requests usb and no libusb support
